// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Game /> Snapshots renders correctly 1`] = `
<div
  className="game"
>
  <div
    className="control-area"
  >
    <a
      className="waves-effect waves-light btn-small"
      id="start-game-btn"
      onClick={[Function]}
    >
      Start game
    </a>
    <a
      className="waves-effect waves-light red lighten-2 btn-small"
      id="exit-game-btn"
      onClick={[Function]}
    >
      Exit
    </a>
  </div>
  <div
    className="deal-area"
  >
    <div
      className="card-set"
    >
      <img
        className="card"
        src="card_back.svg"
      />
    </div>
  </div>
  <div
    className="player-area bottom"
  >
    <div
      className="player-info"
    >
      Luffy
      -
      1
    </div>
    <div
      className="card-set"
    >
      <img
        className="card"
        src="2D.svg"
      />
      <img
        className="card"
        src="KS.svg"
      />
    </div>
  </div>
  <div
    className="player-area top"
  >
    <div
      className="player-info"
    >
      Sanji
      -
      2
    </div>
    <div
      className="card-set"
    >
      <img
        className="card"
        src="2D.svg"
      />
    </div>
  </div>
  <div
    className="player-area right"
  >
    <div
      className="player-info"
    >
      Nami
      -
      3
    </div>
    <div
      className="card-set"
    />
  </div>
  <div
    className="player-area left"
  />
  <div
    className="table"
  >
    <div
      className="table-inside"
    >
      <div
        className="table-content"
      >
        <div
          className="attack-set"
        >
          <div
            className="card-set"
          >
            <img
              className="card"
              src="2D.svg"
            />
          </div>
        </div>
        <div
          className="defend-set"
        >
          <div
            className="card-set"
          >
            <img
              className="card"
              src="2D.svg"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Game /> Snapshots renders loading state correctly 1`] = `
<div>
  Loading...
</div>
`;

exports[`<Game /> Snapshots renders loading state correctly 2`] = `
<div>
  There is an error!
</div>
`;
